// Vitest Snapshot v1

exports[`DateField component > renders a field in error state 1`] = `
<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="DATE FIELD"
        >
          DATE FIELD
          <span
            aria-hidden="true"
            class="c-fNCeYG"
          >
            *
          </span>
        </label>
      </div>
      <div
        class="c-PJLV c-PJLV-icmpvrW-css"
      >
        <input
          class="c-fZTBsJ c-fZTBsJ-pHZal-size-md c-fZTBsJ-bXVTjQ-state-error"
          id="DATE FIELD"
          name="DATE FIELD"
          type="text"
          value=""
        />
        <button
          aria-controls="radix-4"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Open calendar"
          class="c-fDzwZw c-fDzwZw-PrXKS-size-lg c-fDzwZw-otpKd-cv c-fDzwZw-ialwQu-css"
          data-state="closed"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-dbrbZt c-dbrbZt-eAiySG-size-sm c-dbrbZt-ihFPSGE-css"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 5h18v16H3V5zm18 4H3m4-4V3m10 2V3"
            />
            <rect
              height="2"
              width="2"
              x="15"
              y="15"
            />
          </svg>
        </button>
      </div>
      <div
        class="c-dhzjXW c-dhzjXW-idXOPtz-css"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-eAiySG-size-sm c-dbrbZt-ihYlUBO-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8v5"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="16"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <p
          class="c-fIXJvv c-fIXJvv-bndJoy-size-sm c-fIXJvv-ikkBjHS-css"
        >
          This field is required
        </p>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`DateField component > renders a field with a text input 1`] = `
<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="DATE FIELD"
        >
          DATE FIELD
        </label>
      </div>
      <div
        class="c-PJLV c-PJLV-icmpvrW-css"
      >
        <input
          class="c-fZTBsJ c-fZTBsJ-pHZal-size-md"
          id="DATE FIELD"
          name="DATE FIELD"
          placeholder="DATE FIELD"
          type="text"
          value=""
        />
        <button
          aria-controls="radix-0"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Open calendar"
          class="c-fDzwZw c-fDzwZw-PrXKS-size-lg c-fDzwZw-otpKd-cv c-fDzwZw-ialwQu-css"
          data-state="closed"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-dbrbZt c-dbrbZt-eAiySG-size-sm c-dbrbZt-ihFPSGE-css"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 5h18v16H3V5zm18 4H3m4-4V3m10 2V3"
            />
            <rect
              height="2"
              width="2"
              x="15"
              y="15"
            />
          </svg>
        </button>
      </div>
    </div>
  </form>
</div>
`;
